--- a/css/styles.css
+++ b/css/styles.css
@@ -2,12 +2,56 @@
 Julius Alvarado
 www.julius3d.com
 */
-
 @import url(http://fonts.googleapis.com/css?family=Titillium+Web:900|Roboto:400,100);
 
-body { background-color: #fff; padding: 20px; }
-
-#myQuiz {
-   font-family: 'Roboto', sans-serif; font-size: 16px; font-weight: 400;
+body {
+    background-color: #fff;
+    padding: 20px;
 }
+
+#my-quiz {
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    color: whitesmoke;
+    position: relative;
+    display: block;
+    width: 700px;
+    height: 600px;
+    overflow: hidden;
+    background: url(../images/background.jpg) no-repeat 0 0;
+    margin: auto;
+}
+
+#my-quiz h1 {
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: 300;
+}
+
+/*
+-------- Intro --------
+*/
+
+#my-quiz .intro {
+    position: absolute;
+    top:120px; left: 700px;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 12px;
+}
+
+/*
+-------- Question --------
+*/
+#my-quiz .question {
+    position: absolute;
+    top:120px;
+    left: 700px;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 12px;
+}
+
+
+
 
