--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -5,63 +5,115 @@ www.julius3d.com
 @import url(http://fonts.googleapis.com/css?family=Titillium+Web:900|Roboto:400,100);
 
 $j-black: #555555;
+$j-orange: rgba(188, 101, 6, 0.9);
+$j-green: #228048;
+$transparent-bg-5: rgba(0, 0, 0, 0.5);
 
 body {
-  background-color: #fff;
-  padding: 20px;
+	background-color: #fff;
+	padding: 20px;
 }
 
 #my-quiz {
-  font-family: 'Roboto', sans-serif;
-  font-size: 16px;
-  font-weight: 400;
-  color: whitesmoke;
-  position: relative;
-  display: block;
-  width: 700px;
-  height: 600px;
-  overflow: hidden;
-  background: url(../images/background.jpg) no-repeat 0 0;
-  margin: auto;
-
-  h1 {
-    text-align: center;
-    text-transform: uppercase;
-    font-weight: 300;
-  }
-
-  /*
-  -------- #my-quiz > .intro --------
-  */
-  .intro {
-    position: absolute;
-    top: 120px;
-    left: 700px;
-    background-color: rgba(0, 0, 0, 0.5);
-    padding: 12px;
-  }
-  /*
-  -------- #my-quiz > .question --------
-  */
-  .question {
-    position: absolute;
-    top: 120px;
-    /*left: 700px;*/
-    width: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    padding: 12px;
-
-    .ans {
-      display: inline-block;
-      border: solid thin whitesmoke;
-      border-radius: 8px;
-      padding: 8px;
-      width: 40%;
-      position: relative;
-      cursor: pointer;
-      margin: 8px 8px;
-    }
-  }
+	font-family: 'Roboto', sans-serif;
+	font-size: 16px;
+	font-weight: 400;
+	color: whitesmoke;
+	position: relative;
+	display: block;
+	width: 700px;
+	height: 600px;
+	overflow: hidden;
+	background: url(../images/background.jpg) no-repeat 0 0;
+	margin: auto;
+	
+	h1 {
+		text-align: center;
+		text-transform: uppercase;
+		font-weight: 300;
+	}
+	
+	/*
+	//-- INTRO SECTION --\\
+	-------- #my-quiz > .intro --------
+	*/
+	.intro {
+		position: absolute;
+		top: 120px;
+		left: 700px;
+		background-color: $transparent-bg-5;
+		padding: 12px;
+	}
+	
+	/*
+	//-- QUESTION SECTION --\\
+	-------- #my-quiz > .question --------
+	*/
+	.question {
+		position: absolute;
+		top: 120px;
+		/*left: 700px;*/
+		width: 100%;
+		background-color: $transparent-bg-5;
+		padding: 12px;
+		
+		.ans {
+			display: inline-block;
+			border: solid thin whitesmoke;
+			border-radius: 8px;
+			padding: 8px;
+			width: 40%;
+			position: relative;
+			cursor: pointer;
+			margin: 8px 8px;
+		}
+		
+		.ans::after {
+			content: '';
+			display: block;
+			width: 20px;
+			height: 20px;
+			// background: #777 no-repeat 0 0;
+			background-size: 20px 20px;
+			position: absolute;
+			top: 5px;
+			right: 5px;
+		}
+		
+		.ans.selected {
+			border-color: $j-orange;
+			border-width: 2px;
+		}
+		
+		.ans.selected::after {
+			background-image: url(../images/icon_incorrect.svg);
+		}
+		
+		.ans.correct {
+			border-color: $j-green;
+			border-width: 2px;
+		}
+		
+		.ans.correct::after {
+			background-image: url(../images/icon_correct.svg);
+		}
+	}
+	
+	.question.unanswered {
+		.ans {
+			cursor: pointer;
+		}
+		
+		.ans:hover {
+			background-color: $j-black;
+		}
+	}
+	
+	.question.answered {
+		.ans {
+			cursor: default;
+		}
+	}
 }
 
 
