--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -34,6 +34,50 @@ body {
 	}
 	
 	/*
+	//-- PROGRESS BAR SECTION --\\
+	-------- #my-quiz > .intro --------
+	*/
+	.j-progress {
+		width: 550px;
+		position: absolute;
+		top: 160px;
+		left: 160px;
+		
+		div {
+			position: relative;
+			display: inline-block;
+			width: 30px;
+			height: 30px;
+			margin-right: 30px;
+			border-radius: 50%;
+			background-color: whitesmoke;
+			transition: background-color 1s;
+		}
+		
+		div.correct::after {
+			content: '';
+			display: block;
+			position: absolute;
+			top: -10px;
+			left: -4px;
+			width: 65px;
+			height: 40px;
+			background: url(../images/icon_correct.svg) no-repeat 0 0;
+			transition: opacity 1s, top 1s;
+			opacity: 0;
+		}
+		
+		div.on, div.answered {
+			background-color: $j-black;
+		}
+		
+		div.correct::after {
+			top: -5px;
+			opacity: 1;
+		}
+	}
+		
+	/*
 	//-- INTRO SECTION --\\
 	-------- #my-quiz > .intro --------
 	*/
@@ -52,7 +96,7 @@ body {
 	.question {
 		position: absolute;
 		top: 120px;
-		/*left: 700px;*/
+		left: 700px;
 		width: 100%;
 		background-color: $transparent-bg-5;
 		padding: 12px;
@@ -97,6 +141,35 @@ body {
 		.ans.correct::after {
 			background-image: url(../images/icon_correct.svg);
 		}
+		
+		.results {
+			position: absolute;
+			top: 225px;
+			left: 200px;
+			width: auto;
+			background-color: $transparent-bg-5;
+			padding: 16px;
+			
+			.share {
+				margin-top: 20px;
+				
+				a.btn {
+					margin-right: 20px;
+					padding: 10px 8px 8px 42px;
+					background-repeat: no-repeat;
+					background-position: 10px 6px;
+					background-size: 25px 25px;
+				}
+				
+				a.btn.email {
+					background-image: url(../images/icon_email.svg);
+				}
+				
+				a.btn.twitter {
+					background-image: url(../images/icon_twitter.svg);
+				}
+			}
+		}
 	}
 	
 	.question.unanswered {
@@ -107,13 +180,28 @@ body {
 		.ans:hover {
 			background-color: $j-black;
 		}
+		
+		.feedback {
+			margin-top: 50px;
+			transition: opacity 1.5s,
+			margin-top 1.5s;
+			visibility: hidden;
+			opacity: 0;
+		}
 	}
 	
 	.question.answered {
 		.ans {
 			cursor: default;
 		}
+		
+		.feedback {
+			 visibility: visible;
+			 opacity: 1;
+			 margin-top: 10px;
+		 }
 	}
+	
 }
 
 
